# HGF

./: .gitignore  CMakeLists.txt  license.txt  readme.md  readme.txt
HGF/: CMakeLists.txt  Colormap.cpp  HGF.cpp  HGF.h  HGF_Evolve.cpp  HGF_Utility.cpp  MeshIO.cpp  MeshIO.h  Options.cpp  Options.h  PR.frag  PRRenderer.cpp  PRRenderer.h  Scenes.cpp  Scenes.h  Shader.cpp  Shader.h  Sim.cpp  Sim.h  YImage.cpp  eigenheaders.h  main.cpp
HGF/textures/PereaBeach1/: readme.txt
LosTopos/: CMakeLists.txt
LosTopos/LosTopos3D/: dynamicsurface.cpp  dynamicsurface.h  edgecollapser.cpp  edgesplitter.cpp  surftrack.cpp  surftrack.h
LosTopos/common/: lapack_wrapper.h
LosTopos/common/tunicate/: intersection.cpp  rootparitycollisiontest.cpp
assets/: carousel.txt  cube.txt  doublebubble.txt  foaminit.txt  foaminit_double.txt  foaminit_two_side.txt  inputmesh_10bubbles.txt  pulling_doublebubble.txt  sheet.txt  straw.txt  twobubbles.txt  tworingspinching.txt
cmake/: FindEigen.cmake  FindIGL.cmake  FindLAPACK.cmake
hgf_assets/: arec2obj.ipynb  barrel.txt  brakke.txt  bubblewand.txt  constrainedsphere.txt  cubeOverFilm.txt  cubicframe.txt  foaminit_triple.txt  inputmesh_6bubbles.txt  inputmesh_doublebubble_converged.txt  lattice.txt  octahedron.txt  peanutbubble.txt  pullingfoam_doublebubble.txt  quadjunction.txt  sphere.txt  tet.txt  triplejunction.txt
hgf_assets/sample_mesh/: 10bubbles_flabel.txt  6bubbles_flabel.txt  doublebubble_converged_flabel.txt
